Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-16061

e2fsck reported "Fast symlink 1119225630 has EXTENT_FL set." from SNL_racer_01 job which ran during OST failback

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • Lustre 2.16.0
    • None
    • None
    • 3
    • 9223372036854775807

    Description

      stat of inode reported by e2fsck:

      [root@kjcf02n02 ~]# debugfs -R "stat <1119225630>" /dev/md65
      debugfs 1.45.6.cr1 (14-Aug-2020)
      Inode: 1119225630   Type: symlink    Mode:  0000   Flags: 0x80000
      Generation: 888475840    Version: 0x00000000:00000000
      User:     0   Group:     0   Project:     0   Size: 24
      File ACL: 0
      Links: 1   Blockcount: 0
      Fragment:  Address: 0    Number: 0    Size: 0
       ctime: 0x60f3384b:99940ca8 -- Sat Jul 17 15:06:35 2021
       atime: 0x60f3384b:99940ca8 -- Sat Jul 17 15:06:35 2021
       mtime: 0x60f3384b:99940ca8 -- Sat Jul 17 15:06:35 2021
      crtime: 0x60f3384b:99940ca8 -- Sat Jul 17 15:06:35 2021
      Size of extra inode fields: 32
      Extended attributes:
        trusted.lma (24) = 00 00 00 00 02 00 00 00 06 9a 03 40 02 00 00 00 4d 31 00 00 00 00 00 00 
        lma: fid=[0x240039a06:0x314d:0x0] compat=0 incompat=2
      Fast link dest: "[0x240039a06:0x314d:0x0]"
      [root@kjcf02n02 ~]#
      

      Attachments

        Activity

          People

            zam Alexander Zarochentsev
            zam Alexander Zarochentsev
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: